Fix overflow

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden
+}
+
 .login-container {
   display: flex;
   justify-content: center;
